# Hackaton-2024

./: README.md  image_processor.py  requirements.txt
Hack a ton/moonshot_for_mosmed-main/: README.md  __init__.py  classification.ipynb  image_processor.py  model.py  pyproject.toml  utils.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
moonshot/: image_processor.py
notebooks/: PythonTest.py  classification.ipynb  classifier_epta.ipynb  lesha_loshok_jou.ipynb
