[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moonshot"
version = "0.0.1"
dynamic = ["dependencies"]
requires-python = ">=3.10"
description = "Foundation model for chest X-Ray images."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["medical computer vision", "deep learning", "foundation models"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# [project.urls]
# Homepage = ""
# Issues = ""

[tool.setuptools.packages.find]
include = ["moonshot"]
namespaces = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
